-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.0 Beta
-
None
-
Windows 8.1 64 bit, MSVC 2013
-
c803af51677c31ec7010f5c481ad59272694f138
Run the attached example and drop a text file into the QTextEdit.
You'll hit an assert:
0 jb::qt_message_fatal qlogging.cpp 1404 0x59f5700b
1 jb::QMessageLogger::fatal qlogging.cpp 639 0x59f55bb5
2 jb::qt_assert_x qglobal.cpp 2819 0x59f4c401
3 jb::QVector<jb::QScriptItem>::operator[] qvector.h 396 0x7ff8af7b7a85
4 jb::QTextLine::cursorToX qtextlayout.cpp 2564 0x7ff8af8e8635
5 jb::QTextLine::cursorToX qtextlayout.h 225 0x7ff8af7bc616
6 jb::QWidgetTextControlPrivate::rectForPosition qwidgettextcontrol.cpp 1423 0x5ae1471b
7 jb::QWidgetTextControl::ensureCursorVisible qwidgettextcontrol.cpp 3104 0x5ae09d94
8 jb::QWidgetTextControl::insertFromMimeData qwidgettextcontrol.cpp 2617 0x5ae0ff34
9 jb::QTextEdit::insertFromMimeData qtextedit.cpp 2081 0x5add9133
10 jb::QTextEditControl::insertFromMimeData qtextedit.cpp 98 0x5addd677
11 jb::QWidgetTextControlPrivate::dropEvent qwidgettextcontrol.cpp 1978 0x5ae17104
12 jb::QWidgetTextControl::processEvent qwidgettextcontrol.cpp 1057 0x5ae0e3fd
13 jb::QWidgetTextControl::processEvent qwidgettextcontrol.cpp 952 0x5ae0ef7e
14 jb::QTextEditPrivate::sendControlEvent qtextedit_p.h 91 0x5addd99c
15 jb::QTextEdit::dropEvent qtextedit.cpp 1679 0x5add8c79
16 jb::QWidget::event qwidget.cpp 8849 0x5ab3d541
17 jb::QFrame::event qframe.cpp 526 0x5ad1f2af
18 jb::QAbstractScrollArea::viewportEvent qabstractscrollarea.cpp 1192 0x5adfab3c
19 jb::QAbstractScrollAreaPrivate::viewportEvent qabstractscrollarea_p.h 102 0x5aac5ad5
20 jb::QAbstractScrollAreaFilter::eventFilter qabstractscrollarea_p.h 118 0x5adffb3d
21 jb::QCoreApplicationPrivate::sendThroughObjectEventFilters qcoreapplication.cpp 1028 0x5a38582b
22 jb::QApplicationPrivate::notify_helper qapplication.cpp 3718 0x5aad18c6
23 jb::QApplication::notify qapplication.cpp 3505 0x5aace471
24 jb::QCoreApplication::notifyInternal qcoreapplication.cpp 932 0x5a384ea4
25 jb::QCoreApplication::sendSpontaneousEvent qcoreapplication.h 231 0x5a4e0edc
26 jb::QWidgetWindow::handleDropEvent qwidgetwindow.cpp 723 0x5ab81fca
27 jb::QWidgetWindow::event qwidgetwindow.cpp 212 0x5ab7ff13
28 jb::QApplicationPrivate::notify_helper qapplication.cpp 3722 0x5aad18e6
29 jb::QApplication::notify qapplication.cpp 3164 0x5aacc66d
30 jb::QCoreApplication::notifyInternal qcoreapplication.cpp 932 0x5a384ea4
31 jb::QCoreApplication::sendEvent qcoreapplication.h 228 0x5a38edf3
32 jb::QGuiApplicationPrivate::processDrop qguiapplication.cpp 2689 0x7ff8af715ea8
33 jb::QWindowSystemInterface::handleDrop qwindowsysteminterface.cpp 589 0x7ff8af6eaad9
34 jb::QWindowsOleDropTarget::Drop qwindowsdrag.cpp 631 0x7ff8b10f6b50
35 GetObjectFromRotByPath ole32 0x7ff8cd675460
36 NdrServerInitializeMarshall RPCRT4 0x7ff8cbf42225
37 NdrClearOutParameters RPCRT4 0x7ff8cc04b5f9
38 NdrServerInitialize RPCRT4 0x7ff8cbf674a0
39 Ordinal79 combase 0x7ff8cdd6103f
40 Ordinal79 combase 0x7ff8cdd60f13
41 CoFreeUnusedLibraries combase 0x7ff8cdbf3efc
42 NdrOleDllGetClassObject combase 0x7ff8cdd65a1f
43 Ordinal79 combase 0x7ff8cdd6096b
44 CoFreeUnusedLibraries combase 0x7ff8cdbf32b8
45 DispatchMessageW USER32 0x7ff8cbdc2434
46 IsThreadDesktopComposited USER32 0x7ff8cbdc2297
47 jb::QEventDispatcherWin32::processEvents qeventdispatcher_win.cpp 787 0x5a43bbda
48 jb::QWindowsGuiEventDispatcher::processEvents qwindowsguieventdispatcher.cpp 72 0x7ff8b10ba60a
49 jb::QEventLoop::processEvents qeventloop.cpp 129 0x5a37ff48
50 jb::QEventLoop::exec qeventloop.cpp 204 0x5a380183
51 jb::QCoreApplication::exec qcoreapplication.cpp 1185 0x5a382f01
52 jb::QGuiApplication::exec qguiapplication.cpp 1533 0x7ff8af70fe28
53 jb::QApplication::exec qapplication.cpp 2957 0x5aacbf9a
54 main main.cpp 9 0x7ff7464f2a69
55 WinMain qtmain_win.cpp 112 0x7ff7464f7858
56 __tmainCRTStartup crtexe.c 618 0x7ff7464f7071
57 WinMainCRTStartup crtexe.c 466 0x7ff7464f6dee
58 BaseThreadInitThunk KERNEL32 0x7ff8cd8716ad
59 RtlUserThreadStart ntdll 0x7ff8cde84409
- relates to
-
QTBUG-40079 Crash when copy-dragging text beyond the end of a dext document
-
- Closed
-
-
QTBUG-40079 Crash when copy-dragging text beyond the end of a dext document
-
- Closed
-
- replaces
-
QTBUG-42223 QTextCursor::beginEditBlock() crash after replacing text with shorter text
-
- Closed
-
For Gerrit Dashboard: QTBUG-42103 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
97866,3 | fix crash when dropping a file into an empty QTextEdit | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |
99425,1 | fix crash when dropping a file into an empty QTextEdit | dev | qt/qtbase | Status: ABANDONED | 0 | 0 |